remove unuseful code

--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Azure Static Web Apps Blazor Sample</title>
+    <title>Placify</title>
     <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="css/stone.css" rel="stylesheet" />
     <link href="Client.styles.css" rel="stylesheet" />
 </head>
 
